# color-adjust

./: cabal.project  color-adjust.cabal  readme.org  stack.yaml
other/: gradient.html
src/Data/Colour/: Adjust.hs
