cabal-version: 2.4
name:          color-adjust
version:       0.0.1
synopsis: See readme.md
description: See readme.md for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) AfterTimes
license: BSD-3-Clause
homepage: https://github.com/tonyday567/color-adjust#readme
bug-reports: https://github.com/tonyday567/color-adjust/issues
build-type: Simple
tested-with: GHC == 8.10.4

source-repository head
  type: git
  location: https://github.com/tonyday567/color-adjust

common common-options
  build-depends:
    base >=4.7 && <5,
    Color ^>=0.3,
    attoparsec,
    text,
    optics-core,
    scientific,
    containers,
    random,
    neat-interpolation ^>= 0.5.1,
  default-language:
    Haskell2010

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -fwrite-ide-info
    -hiedir=.hie

library
  hs-source-dirs:
    src
  default-extensions:
  build-depends:
    base >=4.7 && <5,
    chart-svg >= 0.3,
    Color ^>=0.3,
    attoparsec,
    text,
    optics-core,
    scientific,
    containers,
    random,
    neat-interpolation ^>= 0.5.1,
    numhask,
    numhask-array,
    numhask-space,
    adjunctions,
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -fwrite-ide-info
    -hiedir=.hie
  exposed-modules:
    Data.Colour.Adjust
